--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <string name="calculate">Hesabla</string>
     <string name="nointernet">İnternetla əlaqə yoxdur</string>
     <string name="success_register">İstifadəçi müvəffəqiyətlə qeydiyatdan keçdi</string>
+
+
+    <string name="meta_position">meta_position</string>
+    <string name="meta_title">meta_title</string>
 </resources>
